OpenAPI spec: add account fields
