# api/v1/model.go
@@ -3,32 +3,51 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package v1
 
-// Account defines model for Account.
-type Account struct {
-	// Id The ID
-	Id ID `binding:"required,max=36" json:"id"`
+// AccountOutput defines model for AccountOutput.
+type AccountOutput struct {
+	// Balance Current account balance. The balance is represented by an integer to ensure accuracy. \
+	// To determine the real balance, you need to divide the current number by 100.
+	Balance int64 `binding:"required,numeric" json:"balance"`
 
-	// Name Account name
-	Name string `binding:"required,max=255" json:"name"`
+	// Comment Account comment.
+	Comment *string `binding:"omitempty,min=0,max=255" json:"comment,omitempty"`
+
+	// Disabled Account activity status.
+	Disabled bool `binding:"required,boolean" json:"disabled"`
+
+	// Id Object unique identifier.
+	Id ID `binding:"required,min=1,max=36" json:"id"`
+
+	// Name Account name.
+	Name string `binding:"required,min=1,max=255" json:"name"`
+
+	// Version Object version. Used for optimistic locking.
+	Version Version `binding:"required,numeric,gte=0" json:"version"`
 }
 
-// Error defines model for Error.
+// Error Error structure.
 type Error struct {
-	// Code Error code
-	Code int8 `binding:"required,gte=0,lte=127" json:"code"`
+	// Code Error code.
+	Code int8 `binding:"required,numeric,gte=0,lte=127" json:"code"`
 
-	// Message Error message
-	Message string `binding:"required,max=4000" json:"message"`
+	// Message Error message.
+	Message string `binding:"required,min=1,max=4000" json:"message"`
 }
 
-// ID The ID
+// ID Object unique identifier.
 type ID = string
 
-// NewAccount defines model for NewAccount.
-type NewAccount struct {
-	// Name Account name
-	Name string `binding:"required,max=255" json:"name"`
+// NewAccountInput Input for a new account creation.
+type NewAccountInput struct {
+	// Comment Account comment.
+	Comment *string `binding:"omitempty,min=0,max=255" json:"comment,omitempty"`
+
+	// Name Account name.
+	Name string `binding:"required,min=1,max=255" json:"name"`
 }
 
+// Version Object version. Used for optimistic locking.
+type Version = string
+
 // AddAccountJSONRequestBody defines body for AddAccount for application/json ContentType.
-type AddAccountJSONRequestBody = NewAccount
+type AddAccountJSONRequestBody = NewAccountInput
